[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/Pawn/Actor/Actions/Action.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Pawn/Actor/Actions/Pickup/Pickup.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.5, 1 )

[node name="Pickup" instance=ExtResource( 1 )]
script = ExtResource( 2 )
throw_velocity = Vector2( 15, 10 )

[node name="ActorRayCast" type="RayCast" parent="." index="0"]
enabled = true
cast_to = Vector3( 0, 4.5, 0 )
collision_mask = 3

[node name="PickupBox" type="Area" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1 )
collision_layer = 3
collision_mask = 3
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="PickupBox" index="0"]
shape = SubResource( 1 )

[node name="HeightMeasure" type="Spatial" parent="." index="2"]

[node name="TopRayCast" type="RayCast" parent="HeightMeasure" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5000, 0 )
enabled = true
cast_to = Vector3( 0, -10000, 0 )
collision_mask = 2147483648

[node name="BottomRayCast" type="RayCast" parent="HeightMeasure" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5000, 0 )
enabled = true
cast_to = Vector3( 0, 10000, 0 )
collision_mask = 2147483648

[node name="PlaceTimer" type="Timer" parent="." index="3"]
wait_time = 0.1
one_shot = true

[node name="DropTimer" type="Timer" parent="." index="4"]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
